kubernetes/apps/home/plane/app/tailscale-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: plane
  namespace: observability
spec:
  ingressClassName: tailscale
  rules:
  - host: plane
    http:
      paths:
      - backend:
          service:
            name: plane-web
            port:
              number: 3000
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - plane
